# PixelExplorer

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  LICENSE.md  PixelExplorer.sln  PixelExplorer.vcxproj  PixelExplorer.vcxproj.filters  README.md  TODO List.txt  build.bat  buildGLEW.sh
PECore/: CMakeLists.txt
PECore/private/: PE_application_entry.h  PE_asset_manager_internal.h  PE_barrier.h  PE_event_loop.h  PE_exception.h  PE_generated_graphics_api.h  PE_global.h  PE_graphics_adapter.h  PE_graphics_api.h  PE_graphics_implementation.h  PE_graphics_opengl.h  PE_log_init.h  PE_memory.h  PE_opengl_adapter.h  PE_work_queue.h  PE_worker_thread.h
PECore/private/gl_graphics/: PE_gl_defines.h  PE_gl_mesh.h  PE_gl_shader.h  PE_gl_types.h  PE_gl_window.h  PE_opengl_graphics.h
PECore/private/opengl_graphics/: PE_gl_mesh.h  PE_opengl_common.h  PE_opengl_graphics.h  PE_opengl_shader.h  PE_opengl_window.h
PECore/public/: PECore.h  PE_asset_manager.h  PE_core.h  PE_defines.h  PE_errors.h  PE_graphics.h  PE_graphics_types.h  PE_log.h  PE_memory.h  PE_opengl_graphics.cpp  PE_reference_utils.h  PE_referenced.h  PE_type_asserts.h  PE_work_queue.h  PE_worker_thread.h
PECore/res/shaders/: test.pegls
PECore/src/: PECore.cpp  PE_application_entry.cpp  PE_asset_manager.cpp  PE_asset_manager_internal.cpp  PE_barrier.cpp  PE_core.cpp  PE_event_loop.cpp  PE_exception.cpp  PE_global.cpp  PE_graphics.cpp  PE_graphics_implementation.cpp  PE_graphics_opengl.cpp  PE_log.cpp  PE_memory.cpp  PE_opengl_adapter.cpp  PE_referenced.cpp  PE_work_queue.cpp  PE_worker_thread.cpp
PECore/src/opengl_graphics/: PE_opengl_graphics.cpp  PE_opengl_shader.cpp  PE_opengl_window.cpp
PECore/tools/: genDGAPI.py  generate_graphics_api.py
PETests/: CMakeLists.txt
PETests/src/: test.cpp
PixelExplorer/: CMakeLists.txt  PixelExplorer.vcxproj  PixelExplorer.vcxproj.filters  TODO List.txt  imgui.ini
PixelExplorer/Debug-NoRP3D/: PixelExplorer.exe.recipe  vc142.idb
PixelExplorer/Debug-NoRP3D/PixelExplorer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PixelExplorer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PixelExplorer/assets/: default.pxb
PixelExplorer/assets/blocks/: PX_TEST_BLOCK.pxblock  TEST_BLOCK.pxblock
PixelExplorer/assets/default/: default.pxb
PixelExplorer/assets/px/: px.pxb
PixelExplorer/assets/shaders/: basic.pxeshader  basic.shader  chunk.shader  cube.shader  terrain.pxeshader
PixelExplorer/private/: PE_exception.h  PE_mod_instance.h  PE_mod_loader.h
PixelExplorer/public/: PE_defines.h  PE_errors.h  PE_log.h  PE_memory.h  PE_mod_interface.h  PE_reference_utils.h  PE_referenced.h  PE_stdint.h  PE_type_asserts.h  PixelExplorer.h
PixelExplorer/res/shaders/: Basic.shader  Chunk.shader
PixelExplorer/src/: Application.cpp  Application.h  ApplicationScene.cpp  ApplicationScene.h  Camera.cpp  Camera.h  Color.h  DataBuffer.cpp  DataBuffer.h  DataBuffer.inl  Direction.cpp  Direction.h  FileUtilities.cpp  FileUtilities.h  Game.cpp  Game.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Logger.inl  PE_exception.cpp  PE_log.cpp  PE_memory.cpp  PE_mod_instance.cpp  PE_mod_interface.cpp  PE_mod_loader.cpp  PE_referenced.cpp  Package.h  PhyTest.cpp  PhysicsCommonRef.h  PhysicsMesh.cpp  PhysicsWorldRef.h  PixelExplorer.cpp  Player.h  RefCount.h  RefCount.inl  RefCounted.h  UpdatableScene.cpp  UpdatableScene.h  (+3 more)
PixelExplorer/src/Rendering/: Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h
PixelExplorer/src/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.fwd.h  ChunkManager.h  ChunkPositionQueue.cpp  ChunkPositionQueue.h  ChunkRenderMesh.cpp  ChunkRenderMesh.h  FaceDirection.h  TimedChunkPositionQueue.cpp  TimedChunkPositionQueue.h
PixelExplorer/src/common/: Color.h  Color.inl  DataBuffer.h  DataBuffer.inl  Logger.cpp  Logger.h  Logger.inl  OSHelpers.h  OSHelpers.inl  RefCount.inl  RefCounted.h  Timer.h  Timer.inl
PixelExplorer/src/engine/: Camera.h  IndexBuffer.h  InputManager.h  Mesh.cpp  PointCull.h  RefCounted.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferAttrib.h
PixelExplorer/src/game/: FPSCamera.h  Game.cpp  Game.h
PixelExplorer/src/gui/: ErrorScreen.cpp  ErrorScreen.h  PauseMenu.cpp  PauseMenu.h  PexGui.cpp  PlayMenu.cpp  PlayMenu.h
PixelExplorer/src/package/: Package.h  PackageLoader.cpp  PackageLoader.h  SubPackageId.h
PixelExplorer/src/physics/: PhysicsBase.cpp  PhysicsBase.fwd.h  PhysicsBase.h  PhysicsCommonRef.fwd.h  PhysicsCommonRef.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsMesh.h  PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.fwd.h  PhysicsScene.h  PhysicsWorldRef.fwd.h  PhysicsWorldRef.h  StaticPhysicsObject.cpp  StaticPhysicsObject.fwd.h  StaticPhysicsObject.h
PixelExplorer/src/rendering/: BasicGLRenderObject.h  BasicMaterial.cpp  BasicMaterial.h  Camera.h  CameraInterface.h  ExampleRenderMesh.cpp  ExampleRenderMesh.h  GLAsset.h  GLNode.h  GLObject.cpp  GLObject.fwd.h  GLObject.h  GLRenderObject.h  GLTexture.h  GUIElement.h  GlTexture.cpp  Material.cpp  Material.h  MaterialProperties.h  RenderGlobal.h  RenderMesh.cpp  RenderMesh.h  RenderObject.h  RenderWindow.cpp  RenderWindow.fwd.h  RenderWindow.h  Renderer.fwd.h  Shader.cpp  Shader.fwd.h  Shader.h  TestRenderable.cpp  TestRenderable.h  Texture.cpp  Texture.h  TexturedMaterial.cpp  TexturedMaterial.h
PixelExplorer/src/scene/: ErrorMenu.cpp  ErrorMenu.h  MainMenu.cpp  MainMenu.h  TerrainGenerationTest.cpp  TerrainGenerationTest.h
PixelExplorer/src/terrain/: DebugTerrainGenerator.h  FlatTerrainGenerator.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.h  TerrainManager.cpp  TerrainManager.h  TerrainObject.cpp  TerrainObject.h  TerrainRenderMesh.cpp  TerrainRenderMesh.h
PixelExplorer/src/tools/: RenderLine.cpp  RenderLine.h  RenderPoint.cpp  RenderPoint.h
PixelExplorer/src/util/: DataBuffer.h  DataBuffer.inl  Direction.cpp  Direction.h  (+2 more)
TestMod/: CMakeLists.txt
TestMod/private/: TMOD_test_mod_imp.h
TestMod/public/: TMOD_test_mod.h
TestMod/src/: TMOD_test_mod_imp.cpp  mod.cpp
(+818 files in other folders)
